--- a/templates/index.html
+++ b/templates/index.html
@@ -79,7 +79,7 @@
             let maxX = containerRect.width - buttonRect.width - 20;  // Rango en X dentro del contenedor
             let maxY = containerRect.height - buttonRect.height - 20;  // Rango en Y dentro del contenedor
 
-            //let x = Math.random() * maxX;  // Calcula una posición aleatoria en X
+            let x = Math.random() * maxX;  // Calcula una posición aleatoria en X
             let y = Math.random() * maxY;  // Calcula una posición aleatoria en Y
                      // Establece la posición del botón "No"
             noButton.style.left = `${x}px`;
